src/deploy/resources/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kube-review
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 8080
